# rules_kotlin

./: .bazelrc  BUILD  MODULE.bazel  MODULE.release.bazel  Makefile  README.md  kotlin_rules_maven_install.json
docs/: kotlin.md
kotlin/: BUILD  jvm.bzl  kotlin.bzl
kotlin/compiler/: BUILD  BUILD.release.bazel  compiler.bzl
kotlin/internal/: defs.bzl  toolchains.bzl
kotlin/internal/jvm/: compile.bzl  impl.bzl  jvm.bzl
kotlin/settings/: BUILD.bazel
scripts/: prepare_local_dir_override.sh  release.sh
src/main/kotlin/: BUILD  BUILD.release.bazel  bootstrap.bzl
src/main/kotlin/io/bazel/kotlin/builder/: BUILD
src/main/kotlin/io/bazel/kotlin/builder/cmd/: BUILD.bazel  Build.kt  MergeJdeps.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/: BUILD.bazel  KotlinBuilder.kt  MergeJdeps.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/jvm/: CompilationArgs.kt  CompilationTask.kt  InternalCompilerPlugins.kt  JDepsGenerator.kt  JacocoInstrumentation.kt  JdepsMerger.kt  JdepsParser.kt  KotlinJvmTaskExecutor.kt
src/main/kotlin/io/bazel/kotlin/builder/toolchain/: BUILD.bazel  CompilationTaskContext.kt  KotlinToolchain.kt
src/main/kotlin/io/bazel/kotlin/builder/utils/: ArgMap.kt  BUILD.bazel  BazelRunFiles.kt  IOUtils.kt  MiscUtils.kt
src/main/kotlin/io/bazel/kotlin/builder/utils/jars/: BUILD.bazel  JarCreator.kt  JarHelper.kt  JarOwner.kt  SourceJarCreator.kt
src/main/kotlin/io/bazel/kotlin/compiler/: BazelK2JVMCompiler.kt
src/main/kotlin/io/bazel/kotlin/model/: BUILD.bazel  task.kt
src/main/kotlin/io/bazel/kotlin/plugin/jdeps/: BUILD.bazel  BaseJdepsGenExtension.kt  JdepsGenCommandLineProcessor.kt  JdepsGenComponentRegistrar.kt  JdepsGenExtension.kt
src/main/kotlin/io/bazel/kotlin/plugin/jdeps/k2/: ClassUsageRecorder.kt
src/main/kotlin/io/bazel/worker/: ContextLog.kt  InvocationWorker.kt  PersistentWorker.kt  TaskResult.kt  Worker.kt  WorkerContext.kt  WorkingDirectoryContext.kt
src/main/protobuf/: BUILD
src/main/starlark/core/options/: opts.kotlinc.bzl
src/main/starlark/core/repositories/: BUILD  bzlmod_setup.bzl  compiler.bzl  download.bzl  initialize.release.bzl  setup.bzl  versions.bzl
src/main/starlark/core/repositories/kotlin/: artifacts.bzl
src/test/data/jvm/basic/: BUILD
src/test/data/jvm/kapt/: BUILD
src/test/data/jvm/ksp/: BUILD
src/test/kotlin/io/bazel/kotlin/: BUILD  KotlinJvmBasicAssertionTest.kt  defs.bzl
src/test/kotlin/io/bazel/kotlin/builder/: BUILD  Deps.java  DirectoryType.java  KotlinAbstractTestBuilder.java  KotlinBuilderTestComponent.java  KotlinJvmTestBuilder.java
src/test/kotlin/io/bazel/kotlin/builder/tasks/: BUILD.bazel
src/test/kotlin/io/bazel/kotlin/builder/tasks/jvm/: JdepsMergerTest.kt  KotlinBuilderJvmBasicTest.java  KotlinJvmTaskExecutorTest.kt
src/test/kotlin/io/bazel/kotlin/builder/utils/: ArgMapTest.kt
src/test/kotlin/io/bazel/kotlin/builder/utils/jars/: JarCreatorTest.kt
src/test/kotlin/io/bazel/kotlin/integration/: BUILD.bazel
src/test/kotlin/io/bazel/worker/: BUILD.bazel  InvocationWorkerTest.kt  WorkerContextTest.kt
src/test/starlark/core/plugin/: test.bzl
(+7 files in other folders)
