load("//src/main/kotlin:bootstrap.bzl", "kt_bootstrap_binary", "kt_bootstrap_library")
load("@rules_java//java:defs.bzl", "java_binary")

kt_bootstrap_library(
    name = "build_lib",
    srcs = ["Build.kt"],
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/main/kotlin/io/bazel/kotlin/builder/tasks",
        "//src/main/kotlin/io/bazel/kotlin/builder/toolchain",
        "//src/main/kotlin/io/bazel/worker",
    ],
)

kt_bootstrap_binary(
    name = "build",
    data = [
        "//kotlin/compiler:kotlin-annotation-processing",
        "//kotlin/compiler:kotlin-compiler",
        "//kotlin/compiler:kotlin-reflect",
        "//src/main/kotlin:skip-code-gen",
        "//src/main/kotlin/io/bazel/kotlin/compiler:compiler.jar",
        "@com_github_jetbrains_kotlin//:home",
        "@kotlinx_serialization_core_jvm//jar",
        "@kotlinx_serialization_json//jar",
        "@kotlinx_serialization_json_jvm//jar",
    ],
    jvm_flags = [
        "-D@com_github_jetbrains_kotlinx...serialization-core-jvm=$(rlocationpath @kotlinx_serialization_core_jvm//jar)",
        "-D@com_github_jetbrains_kotlinx...serialization-json=$(rlocationpath @kotlinx_serialization_json//jar)",
        "-D@com_github_jetbrains_kotlinx...serialization-json-jvm=$(rlocationpath @kotlinx_serialization_json_jvm//jar)",
        "-D@com_github_jetbrains_kotlin...kotlin-compiler=$(rlocationpath //kotlin/compiler:kotlin-compiler)",
        "-D@rules_kotlin...skip-code-gen=$(rlocationpath //src/main/kotlin:skip-code-gen)",
        "-D@rules_kotlin...compiler=$(rlocationpath //src/main/kotlin/io/bazel/kotlin/compiler:compiler.jar)",
        "-D@rules_kotlin..kotlin.compiler.kotlin-reflect=$(rlocationpath //kotlin/compiler:kotlin-reflect)",
        "-XX:-MaxFDLimit",
    ],
    main_class = "io.bazel.kotlin.builder.cmd.Build",
    shade_rules = "//src/main/kotlin:shade.jarjar",
    visibility = ["//src:__subpackages__"],
    runtime_deps = [
        ":build_lib",
    ],
)