load("//src/main/kotlin:bootstrap.bzl", "kt_bootstrap_library")

kt_bootstrap_library(
    name = "utils",
    srcs = glob([
        "*.kt",
        "**/*.kt",
    ]),
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/main/protobuf:deps_java_proto",
         "//src/main/kotlin/io/bazel/kotlin/model:kt-model",
        "@bazel_tools//tools/java/runfiles",
        "@kotlin_rules_maven//:com_google_protobuf_protobuf_java",
        "@kotlin_rules_maven//:com_google_protobuf_protobuf_java_util",
    ],
)
