load("//src/main/kotlin:bootstrap.bzl", "kt_bootstrap_library")

kt_bootstrap_library(
    name = "utils",
    srcs = glob([
        "*.kt",
        "**/*.kt",
    ]),
    visibility = ["//src:__subpackages__"],
    deps = [
         "//src/main/kotlin/io/bazel/kotlin/model:kt-model",
        "@bazel_tools//tools/java/runfiles",
    ],
)
